# ship_task

./: CMakeLists.txt  README.md  ship_exe.cpp  ship_impl.cpp  ship_impl.h  ship_tests.cpp
